add internal hyperlink

--- a/Notebook/Demo.ipynb
+++ b/Notebook/Demo.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "latin-vampire",
+   "id": "smooth-clinton",
    "metadata": {},
    "source": [
+    "<a id='Road_Map'></a>\n",
     "# CR ML Road Map\n",
     "\n",
     "\n",
     "- Step 1:\n",
-    "    - Transfrom Mock Data from Text File to Numpy Dataframe \n",
+    "    - [Transfrom Mock Data from Text File to Numpy Dataframe](#Transfrom_Mock_Data_from_Text_File_to_Numpy_Dataframe)\n",
     "- Step 2:\n",
-    "    - ReCalculate Normalized Factor for Mock Data\n",
+    "    - [ReCalculate Normalized Factor for Mock Data](#ReCalculate_Normalized_Factor_for_Mock_Data)\n",
     "- Step 3:\n",
-    "    - Machine Learning\n",
-    "        - using whole data to train\n",
-    "        - retrain the model with the data in 6 $\\sigma$ CL region \n",
+    "    - [Machine Learning](#Machine_Learning)\n",
+    "        - [using whole data to train](#using_whole_data_to_train)\n",
+    "        - [retrain the model with the data in 6 $\\sigma$ CL region](#retrain_the_model)\n",
     "- Step 4:\n",
-    "   - Create pseudo data from pseudo experiment based on the uncertainty from experimental data\n",
+    "   - [Create pseudo data from pseudo experiment based on the uncertainty from experimental data](#Create_pseudo_data)\n",
     "- Step 5:\n",
-    "   - Using retrained model to predict the parameter for pseudo data\n",
+    "   - [Using retrained model to predict the parameter for pseudo data](#retrained_model_to_predict)\n",
     "- Step 6:\n",
     "    - Send predicted parameters back to GALPROP for MC simulation\n",
     "- Step 7:\n",
@@ -27,21 +28,24 @@
     "- Step 8:\n",
     "    - TBA\n",
     "- Step 9:\n",
-    "    - TBA"
+    "    - TBA\n",
+    "    \n",
+    "[Back to Road Map](#Road_Map)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "baking-cruise",
+   "id": "finished-closing",
    "metadata": {},
    "source": [
+    "<a id='import_package'></a>\n",
     "## Import Packages"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "prospective-senegal",
+   "id": "phantom-french",
    "metadata": {},
    "outputs": [
     {
@@ -51,16 +55,16 @@
       "Tensorflow Version is 2.4.1\n",
       "Keras Version is 2.4.0\n",
       "1 Physical GPUs, 1 Logical GPU\n",
-      "Fri Aug  6 03:24:38 2021       \n",
+      "Fri Aug  6 05:44:49 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 455.23.04    Driver Version: 455.23.04    CUDA Version: 11.1     |\n",
+      "| NVIDIA-SMI 460.73.01    Driver Version: 460.73.01    CUDA Version: 11.2     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
       "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
-      "|   0  GeForce RTX 3090    Off  | 00000000:E1:00.0 Off |                  N/A |\n",
-      "| 42%   51C    P2   114W / 350W |   3519MiB / 24268MiB |     12%      Default |\n",
+      "|   0  Tesla V100-SXM2...  Off  | 00000000:15:00.0 Off |                    0 |\n",
+      "| N/A   35C    P0    57W / 300W |    458MiB / 32510MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -121,10 +125,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cooperative-hayes",
+   "id": "racial-buddy",
    "metadata": {},
    "source": [
-    "## Transfrom Mock Data from Text File to Numpy Dataframe \n",
+    "<a id='Transfrom_Mock_Data_from_Text_File_to_Numpy_Dataframe'></a>\n",
+    "## Transfrom Mock Data from Text File to Numpy Dataframe\n",
+    "\n",
     "\n",
     "- Data Description:\n",
     "\n",
@@ -160,13 +166,15 @@
     "\n",
     "     - chi: chi-square \n",
     "        numpy shape: (# of mock data)\n",
-    "            #new_chi: chi-square from \"modify_data\""
+    "            #new_chi: chi-square from \"modify_data\"\n",
+    "            \n",
+    "[Back to Road Map](#Road_Map)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "hybrid-integration",
+   "id": "innocent-singles",
    "metadata": {},
    "outputs": [
     {
@@ -206,9 +214,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proper-shape",
+   "id": "paperback-tattoo",
    "metadata": {},
    "source": [
+    "<a id='ReCalculate_Normalized_Factor_for_Mock_Data'></a>\n",
     "## ReCalculate Normalized Factor for Mock Data\n",
     "\n",
     "- 1: Using   \n",
@@ -221,13 +230,15 @@
     "            84 means there are 84 energy bins from 1.000e-03 to 1.105e+05\n",
     "            6 means there are the spectrum for E, Li, Be, B, C, O\n",
     "            #data_0: original mocak data\n",
-    "            #modify_data_0: reshape data accroding to recalculated paramete"
+    "            #modify_data_0: reshape data accroding to recalculated paramete\n",
+    "            \n",
+    "[Back to Road Map](#Road_Map)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "beautiful-encoding",
+   "id": "reflected-value",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "digital-scoop",
+   "id": "grave-folder",
    "metadata": {},
    "source": [
     "- 2: Using  \n",
@@ -271,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "primary-institution",
+   "id": "compatible-exposure",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "earlier-coalition",
+   "id": "opposed-plumbing",
    "metadata": {},
    "source": [
     "- 3: Using   \n",
@@ -316,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ongoing-spray",
+   "id": "norman-seventh",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alternative-witch",
+   "id": "latter-moore",
    "metadata": {},
    "source": [
     "- 4: Using   \n",
@@ -361,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "unauthorized-involvement",
+   "id": "accepted-chess",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "turned-audience",
+   "id": "sporting-mayor",
    "metadata": {},
    "source": [
     "- 5: Put `origin_parameter` and `new_parameter` back into  \n",
@@ -399,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "hourly-problem",
+   "id": "suited-nelson",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unexpected-orange",
+   "id": "infinite-pioneer",
    "metadata": {},
    "source": [
     "- 6: Using  \n",
@@ -460,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dependent-performer",
+   "id": "former-produce",
    "metadata": {},
    "outputs": [
     {
@@ -505,22 +516,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bulgarian-python",
+   "id": "caring-constraint",
    "metadata": {},
    "source": [
-    "# Machine Learning\n",
+    "<a id='Machine_Learning'></a>\n",
+    "## Machine Learning\n",
+    "\n",
     "\n",
     "- 1: Using  \n",
     "     `CR.Mock_Data_Processing(parameter=parameter, data=data, usedata = True)`\n",
     "     and\n",
     "     `.Train_Test_split(splitrate = 0.1, split = True)`   \n",
-    "     to whitening data and split into training and test data set with the ratio 9:1."
+    "     to whitening data and split into training and test data set with the ratio 9:1.\n",
+    "     \n",
+    "[Back to Road Map](#Road_Map)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "active-arctic",
+   "id": "chronic-somalia",
    "metadata": {},
    "outputs": [
     {
@@ -568,9 +583,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-sacramento",
+   "id": "willing-judge",
    "metadata": {},
    "source": [
+    "<a id='using_whole_data_to_train'></a>\n",
     "- 2:Using   \n",
     "    `ML.ML_Training(input_train,input_test,source_train,source_test,EPOCH=10, save_path=\"./\")`\n",
     "    to train a model with whole CL region."
@@ -579,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aging-craps",
+   "id": "final-renaissance",
    "metadata": {},
    "outputs": [
     {
@@ -725,9 +741,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "verified-pixel",
+   "id": "ultimate-sheet",
    "metadata": {},
    "source": [
+    "<a id='retrain_the_model'></a>\n",
     "- 3:Using   \n",
     "    `ML.Load_ML_Training(input_train,input_test,source_train,source_test,model_path=\"./Model/CR_ML.h5\", EPOCH = 250, BATCH = 256, save_path=\"./\")`  \n",
     "    to retrain a model in 6 $\\sigma$ CL region."
@@ -736,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "vocational-playing",
+   "id": "finnish-communication",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +873,7 @@
     }
    ],
    "source": [
-    "\n",
+    "%%time\n",
     "data_processing = CR.Mock_Data_Processing(parameter=para_6_sigma, data=data_6_sigma, usedata = True)\n",
     "data_processing.Train_Test_split(splitrate = 0.1, split = True)\n",
     "\n",
@@ -869,19 +886,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "billion-connecticut",
+   "id": "ideal-buying",
    "metadata": {},
    "source": [
+    "<a id='Create_pseudo_data'></a>\n",
     "## Create pseudo data from pseudo experiment based on the uncertainty from experimental data\n",
     "- 1.Using   \n",
     "    `CR.Create_Pseudodata(para_6_sigma,data_6_sigma,chi, LOW = 10 , HIGH = 100000 , number = 2000, index=0).Create_Pseudodata()`  \n",
-    "    to do the pseudo experiment based on the mock data in 6 $\\sigma$ CL region."
+    "    to do the pseudo experiment based on the mock data in 6 $\\sigma$ CL region.\n",
+    "    \n",
+    "    \n",
+    "[Back to Road Map](#Road_Map)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "applicable-philadelphia",
+   "id": "surface-nothing",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imperial-interest",
+   "id": "english-favor",
    "metadata": {},
    "source": [
     "- 2.Using  \n",
@@ -952,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "confidential-calculation",
+   "id": "robust-albany",
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endless-table",
+   "id": "first-effort",
    "metadata": {},
    "source": [
     "-3.Using  \n",
@@ -1016,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "graphic-biotechnology",
+   "id": "nearby-instrumentation",
    "metadata": {},
    "outputs": [
     {
@@ -1063,17 +1084,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forced-congo",
+   "id": "theoretical-flash",
    "metadata": {},
    "source": [
+    "<a id='retrained_model_to_predict'></a>\n",
     "## Using retrained model to predict the parameter for pseudo data\n",
-    "- 1.Load model and estimate the parameters for pseudo experiment"
+    "- 1.Load model and estimate the parameters for pseudo experiment\n",
+    "\n",
+    "\n",
+    "[Back to Road Map](#Road_Map)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "acquired-reputation",
+   "id": "controlling-hello",
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documentary-cable",
+   "id": "understood-tobago",
    "metadata": {},
    "source": [
     "- 2.Using  \n",
@@ -1105,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "floral-teaching",
+   "id": "scenic-saver",
    "metadata": {},
    "outputs": [
     {
@@ -1132,9 +1157,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "offensive-bosnia",
+   "metadata": {},
+   "source": [
+    "[Back to Road Map](#Road_Map)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "placed-float",
+   "id": "restricted-disclosure",
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arctic-applicant",
+   "id": "original-depression",
    "metadata": {},
    "outputs": [],
    "source": []
