add link of NBviewer

--- a/Notebook/Demo.ipynb
+++ b/Notebook/Demo.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "smooth-clinton",
+   "id": "corporate-batman",
    "metadata": {},
    "source": [
     "<a id='Road_Map'></a>\n",
     "# CR ML Road Map\n",
+    "\n",
     "\n",
     "\n",
     "- Step 1:\n",
@@ -30,12 +31,13 @@
     "- Step 9:\n",
     "    - TBA\n",
     "    \n",
-    "[Back to Road Map](#Road_Map)"
+    "[Go To NBViewer](https://nbviewer.jupyter.org/github/alan200276/CR-ML/blob/main/Notebook/Demo.ipynb)   \n",
+    "[Back to Top of Road Map](#Road_Map)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "finished-closing",
+   "id": "ancient-theology",
    "metadata": {},
    "source": [
     "<a id='import_package'></a>\n",
@@ -45,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "phantom-french",
+   "id": "absent-basement",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "racial-buddy",
+   "id": "interested-compiler",
    "metadata": {},
    "source": [
     "<a id='Transfrom_Mock_Data_from_Text_File_to_Numpy_Dataframe'></a>\n",
@@ -174,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "innocent-singles",
+   "id": "tropical-shaft",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "paperback-tattoo",
+   "id": "cathedral-multiple",
    "metadata": {},
    "source": [
     "<a id='ReCalculate_Normalized_Factor_for_Mock_Data'></a>\n",
@@ -238,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "reflected-value",
+   "id": "controversial-asbestos",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grave-folder",
+   "id": "dressed-future",
    "metadata": {},
    "source": [
     "- 2: Using  \n",
@@ -282,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "compatible-exposure",
+   "id": "interpreted-conflict",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposed-plumbing",
+   "id": "alternative-transcript",
    "metadata": {},
    "source": [
     "- 3: Using   \n",
@@ -327,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "norman-seventh",
+   "id": "pressing-catalyst",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latter-moore",
+   "id": "understanding-incentive",
    "metadata": {},
    "source": [
     "- 4: Using   \n",
@@ -372,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "accepted-chess",
+   "id": "early-sacramento",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sporting-mayor",
+   "id": "improving-scottish",
    "metadata": {},
    "source": [
     "- 5: Put `origin_parameter` and `new_parameter` back into  \n",
@@ -410,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "suited-nelson",
+   "id": "transsexual-calibration",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infinite-pioneer",
+   "id": "owned-refund",
    "metadata": {},
    "source": [
     "- 6: Using  \n",
@@ -471,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "former-produce",
+   "id": "pointed-buyer",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caring-constraint",
+   "id": "consecutive-space",
    "metadata": {},
    "source": [
     "<a id='Machine_Learning'></a>\n",
@@ -535,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "chronic-somalia",
+   "id": "expensive-algeria",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "willing-judge",
+   "id": "sought-holiday",
    "metadata": {},
    "source": [
     "<a id='using_whole_data_to_train'></a>\n",
@@ -595,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "final-renaissance",
+   "id": "frank-stockholm",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ultimate-sheet",
+   "id": "functional-finger",
    "metadata": {},
    "source": [
     "<a id='retrain_the_model'></a>\n",
@@ -753,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "finnish-communication",
+   "id": "combined-complaint",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ideal-buying",
+   "id": "silent-prime",
    "metadata": {},
    "source": [
     "<a id='Create_pseudo_data'></a>\n",
@@ -902,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "surface-nothing",
+   "id": "representative-twenty",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "english-favor",
+   "id": "cutting-smile",
    "metadata": {},
    "source": [
     "- 2.Using  \n",
@@ -973,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "robust-albany",
+   "id": "adjustable-pearl",
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "first-effort",
+   "id": "early-prompt",
    "metadata": {},
    "source": [
     "-3.Using  \n",
@@ -1037,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "nearby-instrumentation",
+   "id": "bottom-factory",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "theoretical-flash",
+   "id": "mathematical-football",
    "metadata": {},
    "source": [
     "<a id='retrained_model_to_predict'></a>\n",
@@ -1098,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "controlling-hello",
+   "id": "geological-factor",
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "understood-tobago",
+   "id": "overall-tutorial",
    "metadata": {},
    "source": [
     "- 2.Using  \n",
@@ -1130,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "scenic-saver",
+   "id": "existing-narrative",
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "offensive-bosnia",
+   "id": "rural-google",
    "metadata": {},
    "source": [
     "[Back to Road Map](#Road_Map)"
@@ -1167,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "restricted-disclosure",
+   "id": "optimum-curve",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "original-depression",
+   "id": "velvet-lodge",
    "metadata": {},
    "outputs": [],
    "source": []
